# N-body_simulation

./: .gitmodules  AUTHORS  COPYING  INSTALL  Makefile  Makefile.in  README.md  TODO  config.h.in  config.status  configure  configure.ac
lib/include/: imgui_impl_raylib.h
lib/raylib/: rlcimgui.c  rlcimgui.h
src/: gui.c  gui.h  main.c  particle.c  particle.h  quad_tree.c  quad_tree.h  rlcimgui.c
src/include/: particle.h  quad_tree.h
